<resources>
    <string name="app_name">High Math Calculator</string>
    <string name="btnCalculator">Calculator</string>
    <string name="btnSettings">Settings</string>
    <string name="btnquadraticreduction">quadratic reduction</string>
    <string name="Exit">Exit</string>
    <string name="determinant">Determinant</string>
    <string name="txtinputBackA">Add your matrix there : A</string>
    <string name="txtinputBackB">Add your matrix there : B</string>

    <string name="btnPolinom">Polinomic Calculator</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnFirstTimesSecond">A*B</string>
    <string name="btnSecondTimesFirst">B*A</string>
    <string name="btnInvers">Invers</string>
    <string name="btnSwitch">S</string>

    <string name="btnPositive">Positive</string>
    <string name="btnNegative">Negative</string>
    <string name="btnRank">Rank</string>
    <string name="btnEeigenvector">Eigenvector</string>
    <string name="btnSolve">Solve as\nsystem</string>
    <string name="btnEigenvalue">Eigenvalue</string>

    <string name="hintPolinomA">write cofs with spaces of polynomial A here</string>
    <string name="hintPolinomB">write cofs with spaces of polynomial B here</string>
    <string name="btnTimes">x</string>
    <string name="btnRootsA">roots of A</string>
    <string name="btnRootsB">roots of B</string>
    <string name="btnDivision">/</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="matrixSettings">Save matrix results</string>
    <string name="polinomSettings">Save polynomial results</string>
    <string name="savingHeadline">Saving settings</string>
    <string name="highMathHeadline">High Math Calculator</string>
    <string name="deleteMatrixInsatnce">Delete instance of matrix results</string>
    <string name="deletePolinomInstance">Delete instance of polynomial results</string>
    <string name="search">Search on web</string>
    <string name="matrixHolderMode">Image result list</string>

    <string name="settings">Settings</string>
    <string name="done">Done</string>

    <string name="matrixFragmentNavigation">matrix</string>
    <string name="polynomialFragmentNavigation">polynomial</string>


    <string name="btnOk" translatable="false">Ok</string>
    <string name="errorDialogTitle">Oops, input format is wrong</string>

    <!--matrix exceptions extra text-->

    <string name="diffLineLength">All lines must have same length</string>
    <string name="emptyLineInMatrix">Matrix can not contain empty lines</string>
    <string name="wrongCofFormat">Matrix can contain only complex numbers</string>
    <string name="wrongSymbols">You can not use this symbols in matrix</string>
    <string name="moreLeftBrackets">Too many left brackets</string>
    <string name="moreRightBrackets">Too many right brackets</string>

    <!-- polynomial exception extra text-->
    <string name="wrongSymbolAtPolynomial">You can not use this symbols in polynomials</string>
    <string name="wrongSymbolAtExpPolynomial">You can not use this symbols in polynomials degree</string>
    <string name="tooManyExpSymbols">Too many degree symbols</string>
    <string name="wrongSymbolInDioPolynomialVariable">You can not use this symbols in diofant polynomial variable</string>
    <string name="wrongPositionForExpSymbol">Wrong position for degree symbol, it must be between cof and variable</string>
    <string name="wrongExpVariableFormat">In exponential polynomial you can use only one-symbol-length variables</string>
    <string name="wrongPolynomialCofFormat">You can use only complex number as polynomial cof right now</string>

</resources>
