<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.MatrixFragment"
             android:id="@+id/matrixFrame"
             style="@style/frameLayoutStyle">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation = "vertical" >


            <androidx.constraintlayout.widget.ConstraintLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/firstMatrix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/txtinputBackA"
                        android:inputType="textMultiLine"/>

                <EditText
                        android:id="@+id/secondMatrix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/firstMatrix"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/txtinputBackB"
                        android:inputType="textMultiLine"/>


                <GridLayout
                        android:id="@+id/gridMatrixBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"

                        app:layout_constraintTop_toBottomOf="@id/secondMatrix"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">


                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnDeterminant"
                            android:text="@string/determinant"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnPlus"
                            android:text="@string/btnPlus"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnMinus"
                            android:text="@string/btnMinus"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnFirstTimesSecond"
                            android:text="@string/btnFirstTimesSecond"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnSecondTimesFirst"
                            android:text="@string/btnSecondTimesFirst"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnInvers"
                            android:text="@string/btnInvers"/>
                </GridLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/matrixRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clipToPadding="false"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contextClickable="true">

            </androidx.recyclerview.widget.RecyclerView>



        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</FrameLayout>